# libzeep-webapp-starter

./: .gitignore  CMakeLists.txt  README.md  changelog  package.json  webpack.config.js
docroot/: foo.html  footer.html  head.html  hello.html  index.html  menu.html
src/: main.cpp  revision.hpp
webapp/: index.js  style.scss
